hero fix on small screen

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -4949,8 +4949,8 @@ button {
 
     /* Hero Section adjustment for mobile */
     .hero {
-        height: 35vh !important;
-        min-height: 250px !important;
+        height: 32vh !important;
+        min-height: 200px !important;
     }
     .hero__content {
         display: none !important;
